Added the gitignore

--- a/methods.html
+++ b/methods.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Backbone Sudoku</title>
+    <title>Backbone Sudoku : Methods</title>
 
     <link href="assets/bootstrap.css" rel="stylesheet">
     <link href="assets/custom.css" rel="stylesheet">
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Backbone Sudoku</a>
+          <a class="navbar-brand" href="#">Backbone.js Sudoku</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
